--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "log4js": "~0.6.6",
     "envious": "~0.2.0",
     "jshint": "~2.1.4",
-    "mongoose": "~3.6.15"
+    "mongoose": "~3.6.15",
+    "moment": "~2.1.0"
   }
 }
